<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_plaing"
        android:textStyle="bold"
        android:textColor="@color/primary_dark"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_now_playing_tag"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_now_playing"
        android:layout_below="@+id/tv_now_playing_tag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textColor="@color/accent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/tv_choose_file"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="3"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:id="@+id/spinner"
            android:spinnerMode="dialog"
            android:focusable="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_media_buttons"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_previous_white_24dp"
            android:contentDescription="@string/button_prev"
            android:id="@+id/ib_prev"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_white_24dp"
            android:contentDescription="@string/button_play"
            android:id="@+id/ib_play"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next_white_24dp"
            android:contentDescription="@string/button_next"
            android:id="@+id/ib_next"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="20"

        android:id="@+id/ll_seekbar"
        android:layout_below="@+id/ll_media_buttons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seek_initial"
            android:layout_weight="1"
            android:id="@+id/tv_initial"
            android:textColor="@color/accent"
            />
        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sb_Seek"
            android:indeterminate="false"
            android:layout_weight="18"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seek_final"
            android:id="@+id/tv_final"
            android:textColor="@color/accent"
            />
    </LinearLayout>

</RelativeLayout>